Fixed layout issues with new and featured tag

--- a/styles.css
+++ b/styles.css
@@ -92,7 +92,7 @@
   padding: 0.3rem 0.3rem 0.2rem 0.3rem;
   border-radius: 0.5rem;
   margin-left: 0.5rem;
-  margin-top: 0.3rem;
+  margin-top: -0.3rem;
 
 }
 
@@ -104,7 +104,7 @@
   padding: 0.3rem 0.3rem 0.2rem 0.3rem;
   border-radius: 0.5rem;
   margin-left: 0.5rem;
-  margin-top: 0.3rem;
+  margin-top: -0.3rem;
 }
 
 .description-area {
